<resources>
    <string name="app_name">StockQuote-Standerwick</string>
    <string name="CompanyName">Insert Symbol</string>
    <string name="StockQuote">StockQuote</string>
    <string name="GetQuote">Get Quote!</string>
    <string name="symbol">Symbol: </string>
    <string name="symbolR"></string>
    <string name="Name">Name: </string>
    <string name="NameR"></string>
    <string name="LTP">Last Trade Price: </string>
    <string name="LTPR"></string>
    <string name="LTT">Last Trade Time: </string>
    <string name="LTTR"></string>
    <string name="Change">Change: </string>
    <string name="ChangeR"></string>
    <string name="WeekRange">52 Week Range: </string>
    <string name="WeekRangeR"></string>
    <string name="Result">Results:</string>
</resources>
