<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/StockQuote"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/Symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/CompanyName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/GetQuote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Symbol" />

    <TextView
        android:id="@+id/ToReturn"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/Result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/Name"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToReturn"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/LTP"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/LTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/LTT"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/LTT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTP"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/Change"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/Change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LTT"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/WeekRange"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/WeekRange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Change"
        tools:textSize="18sp"
        android:textAlignment="viewEnd"/>

    <TextView
        android:id="@+id/NameR"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/LTPR"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/LTP"
        app:layout_constraintTop_toBottomOf="@+id/NameR"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/LTTPR"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/LTT"
        app:layout_constraintTop_toBottomOf="@+id/LTPR"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/ChangeR"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/Change"
        app:layout_constraintTop_toBottomOf="@+id/LTTPR"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/WeekRangeR"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/WeekRange"
        app:layout_constraintTop_toBottomOf="@+id/ChangeR"
        tools:textSize="18sp" />

</android.support.constraint.ConstraintLayout>